@@ -1,7 +1,8 @@
 nxMyDB v0.3.0 (not released):
   NEW: Added configuration option "Log_Level" to control the log verbosity.
-  NEW: Logging system to log errors, warnings, and information.
-  NEW: Spin-lock based locking implemented using stored procedures.
+  NEW: Group rename operations are now implemented.
+  NEW: Logging system to log errors, warnings, and information to a dedicated log file.
+  NEW: Spin-lock based locking implemented using stored procedures, reduces failed locks.
   CHG: Renamed configuration option "SyncFirst" to "Sync_First".
   CHG: Renamed configuration option "SyncInterval" to "Sync_Interval".
   CHG: Requires MySQL Server v5.0.19, or newer.
